# Cyber-YTDL

./: .gitignore  README.md  package-lock.json  package.json  postcss.config.js
.github/workflows/: publish.yml
src/: App.tsx  constants.ts  index.css  types.ts
src-tauri/: 2  Cargo.toml  engine.py  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CyberFrame.tsx  Icons.tsx  Menus.tsx  Modals.tsx
src/hooks/: useVideoApp.ts
src/services/: youtubeService.ts
